# mmtools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  etc  pylintrc  pyproject.toml  requirements.txt  setup.py
mmtools/: arguments.py  config.py  mattermost.py  status.py  watch.py
mmtools/etc/: config
src/mmtools/: arguments.py  config.py  mattermost.py  status.py  watch.py
src/mmtools/etc/: config
