[tool]
[tool.poetry]
name = "mmtools"
version = "0.0.35"
description = "mmtools"
license = "ISC"
classifiers = ["Development Status :: 4 - Beta", "Topic :: Utilities", "License :: OSI Approved :: ISC License (ISCL)"]
homepage = "https://github.com/frbor/mmtools"
authors = ["Fredrik Borg <fredrikb.borg@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mmstatus = "mmtools.status:i3blocks"
mmpolybar = "mmtools.status:polybar"
mmwaybar = "mmtools.status:waybar"
mmwatch = "mmtools.watch:main"
mmconfig= "mmtools.config:main"

[tool.poetry.dependencies]
python = "^3.8.0"
caep = "^0.1.0"
dbus-python = "^1.3.2"
mattermostdriver = "^7.3.2"
notify2 = "^0.3.1"
passpy = "^1.0.2"
requests = "^2.28.1"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88

# pyflakes, pycodestyle, pyupgrade and isort
select = ["F", "E", "W", "UP", "I001"]

# Ignore long lines - handled by black
ignore = ["E501"]

target-version = "py39"
