[project]
name = "mmtools"
version = "0.0.39"
description = "mmtools"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
    "License :: OSI Approved :: ISC License (ISCL)"
]

authors = [
    {name = "Fredrik Borg", email = "fredrikb.borg@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "caep == 1.1.*",
    "dbus-python == 1.3.2",
    "mattermostdriver == 7.3.*",
    "notify2 == 0.3.*",
    "passpy == 1.0.2",
    "requests == 2.32.*",
]

[project.urls]
Homepage = "https://github.com/frbor/mmtools"

[tool.uv]
dev-dependencies = [
    "pytest == 8.1.*",
    "mypy == 1.11.*",
    "pre-commit == 3.8.*",
    "pre-commit-hooks == 4.6.*",
    "types-requests",
    "types-passpy",
    "types-setuptools",
]

[project.scripts]
mmstatus = "mmtools.status:i3blocks"
mmpolybar = "mmtools.status:polybar"
mmwaybar = "mmtools.status:waybar"
mmwatch = "mmtools.watch:main"
mmconfig = "mmtools.config:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",   # Builtins
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "PTH", # Pathlib
    "I",   # isort
]

ignore = [
    "E501",   # Ignore long lines - handled by ruff format
    "B019",   # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
]

[tool.mypy]
strict = true
plugins = "pydantic.mypy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
